update front boutons

--- a/FrontEnd/src/app/header/header.component.html
+++ b/FrontEnd/src/app/header/header.component.html
@@ -1,58 +1,5 @@
-<header id="top-ribbon-container" class="boxsizing-header shom-header hitable"><div><div class="dark-blue float-left top-ribbon-logos-container">
-    <a id="top-ribbon-shom-logo" href="https://www.shom.fr/" target="_blank" class="top-ribbon-shom-logo" data-i18n="[title]header.logo;[aria-label]allSites.institutional" title="Logo Shom - Aller au site institutionnel" aria-label="Site institutionnel"></a>
-    <span class="top-ribbon-separator"></span>
-</div>
-<div class="float-left top-ribbon-title-container">
-    <h1 class="top-ribbon-title"><a data-i18n="[title]header.title;[aria-label]header.title;header.label" href="https://data.shom.fr" title="Portail DATA.SHOM.FR - Aller à l'accueil" aria-label="Portail DATA.SHOM.FR - Aller à l'accueil">DATA.SHOM.FR</a></h1>
-</div>
-<div class="float-right top-ribbon-links-container">
-    <ol>
-        <li><a href="https://services.data.shom.fr/support/fr" target="_blank" id="help-page" data-i18n="[title]header.links.help;[aria-label]header.links.help" class="full-padded" title="Aide" aria-label="Aide">
-            <i class="fas fa-lg fa-question"></i></a></li>
-        <li><a id="drawing-action-print-button" href="#" role="button" class="full-padded btn-print-map disabled" data-i18n="[title]drawing.button.printmap.label;[aria-label]drawing.button.printmap.label" title="Imprimer la carte" aria-label="Imprimer la carte">
-            <i class="fas fa-lg fa-print"></i></a></li>
-        <li><a data-i18n="[title]header.links.share;[aria-label]header.links.share" href="#" role="button" class="full-padded my-share disabled" title="Partager" aria-label="Partager">
-            <i class="fas fa-lg fa-share-alt"></i></a></li>
-
-        <li><a data-i18n="[title]header.links.login;[aria-label]header.links.login" href="#" role="button" class="full-padded my-account" title="Se connecter" aria-label="Se connecter">
-            <i class="fas fa-lg fa-user"></i>
-        </a></li>
-    </ol>
-
-    <ol class="change-lng-container">
-        <li><a class="change-lng-fr full-padded" href="#" role="button" data-i18n="[title]header.links.flagFr;[aria-label]header.links.flagFr" title="Passer en Français" aria-label="Passer en Français">
-            <span class="img-fr"></span>
-        </a></li>
-        <li><a class="change-lng-en full-padded" href="#" role="button" data-i18n="[title]header.links.flagEn;[aria-label]header.links.flagEn" title="Passer en Anglais" aria-label="Passer en Anglais">
-            <span class="img-en"></span>
-        </a></li>
-    </ol>
-
-    <span class="top-ribbon-separator-links"></span>
-
-    <a href="#" role="button" class="view-all-sites full-padded">
-        <span class="view-all-sites-label" data-i18n="header.links.ourSites">Tous nos sites</span>&nbsp;
-        <span id="triangle-bottom-right"></span>
-    </a>
-
-    <div class="view-all-sites-container dark-blue">
-        <ul>
-            <li>
-                <a href="https://www.shom.fr/" target="_blank" data-i18n="allSites.institutional">Site institutionnel</a>
-            </li>
-            <li>
-                <a href="https://maree.shom.fr/" target="_blank" data-i18n="allSites.tideGauge">Portail horaires des marées</a>
-            </li>
-            <li>
-                <a href="https://diffusion.shom.fr/" target="_blank" data-i18n="allSites.diffusion">Espace de diffusion</a>
-            </li>
-            <li>
-                <a href="https://portail.ping-info-nautique.fr/" id="all-sites-last" target="_blank" data-i18n="[title]allSites.ping" title="Plateforme nationale de l'information nautique">PING</a>
-            </li>
-        </ul>
-    </div>
-</div>
-</div></header>
-
-
-
+<p class="liens_gestion">
+    <a href="https://www.google.fr/">Gestion des marégraphes</a>  
+    |  <a href="https://www.google.fr/">Gestion des partenaires</a>
+</p>
+<br>
