--- a/FrontEnd/src/app/body/body.component.html
+++ b/FrontEnd/src/app/body/body.component.html
@@ -1,16 +1,38 @@
 <!-- src/app/body/body.component.html -->
- <div [class.affiche]="!isDataLoaded" [class.invisible]="isDataLoaded" >
+ 
+<div class="rectangle">
+  Liste des métadonnées marégraphiques
+</div>
+<br>
+<div [class.affiche]="!isDataLoaded" [class.invisible]="isDataLoaded" >
   Chargement des données ...
  </div>
  <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
-  Les données sont chargées
   <table>
     <caption>Données des marégraphes</caption>
-    <tr>
-      <td>id_maregraphe</td><td>id_meta</td><td>donnee</td><td>date_donnees</td>
-    </tr>
-    <tr *ngFor="let i of donnees">
-      <td>{{i.id_maregraphe}}</td><td>{{i.id_meta}}</td><td>{{i.donnee}}</td><td>{{i.date_donnees}}</td>
-    </tr>
+    
+    <thead>
+      <tr>
+        <th>ID Marégraphe</th>
+        <th>ID Métadonnées</th>
+        <th>Données</th>
+        <th>Date de création/update données</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="lignes_a_colorer" *ngFor="let i of donnees">
+        <td>{{i.id_maregraphe}}</td>
+        <td>{{i.id_meta}}</td>
+        <td>{{i.donnee}}</td>
+        <td>{{i.date_donnees}}</td>
+        <td>
+          <div class="bouton">
+            <button class="Editer"  type="button">Editer</button>
+            <button class="Supprimer" type="button">Supprimer</button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
   </table>
  </div>
