--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,4 +1,5 @@
 
 <app-header></app-header>
-<app-body></app-body>
+<!--<app-tab-maregraphemeta></app-tab-maregraphemeta> -->
+<app-tab-meta></app-tab-meta>
 <router-outlet></router-outlet>
