--- a/FrontEnd/src/app/component/body/body.component.html
+++ b/FrontEnd/src/app/component/body/body.component.html
@@ -8,9 +8,11 @@
   Chargement des données ...
  </div>
  <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
-  <table>
-    <caption>Données des marégraphes</caption>
-    
+
+  <br>
+  <button class="Ajouter"  type="button">Ajouter une métadonnée</button>
+  <br><br>
+  <table>    
     <thead>
       <tr>
         <th>ID Marégraphe</th>
@@ -36,3 +38,4 @@
     </tbody>
   </table>
  </div>
+
