--- a/FrontEnd/src/app/component/header/header.component.html
+++ b/FrontEnd/src/app/component/header/header.component.html
@@ -1,6 +1,7 @@
-<p class="liens_gestion">
+<p class="liens">
     <a href="https://www.google.fr/">Gestion des marégraphes</a>  
-    |  <a href="https://www.google.fr/">Gestion des partenaires</a>
-    |  <a href="tabMaregrapheMeta">Métadonnées des marégraphes</a>  
+    <a href="https://www.google.fr/">Gestion des partenaires</a>
+    <a href="tabMaregrapheMeta">Métadonnées des marégraphes</a>
+    <a href="tabMeta">Métadonnées</a> 
 </p>
 <br>
