--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
@@ -10,7 +10,7 @@
    <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
   
     <br>
-    <button class="Ajouter"  type="button">Ajouter une métadonnée</button>
+    <button class="Ajouter"  type="button"> <img src="assets\fleche.png" height="20" width="20"> Ajouter une métadonnée</button>
     <br><br>
     <table>    
       <thead>
