--- a/FrontEnd/src/app/component/header/header.component.css
+++ b/FrontEnd/src/app/component/header/header.component.css
@@ -7,4 +7,7 @@ a{
     padding: 0.5%;
     border-radius: 3px;
     text-align: center;
+    margin-right: 20px;
+    text-decoration: none;
+    color: black;
 }
