--- a/FrontEnd/src/app/component/header/header.component.html
+++ b/FrontEnd/src/app/component/header/header.component.html
@@ -1,7 +1,8 @@
 <p class="liens">
     <a href="https://www.google.fr/">Gestion des marégraphes</a>  
     <a href="https://www.google.fr/">Gestion des partenaires</a>
-    <a href="tabMaregrapheMeta">Métadonnées des marégraphes</a>
+    <a href="tabMaregrapheMeta/3">Métadonnées des marégraphes</a>
     <a href="tabMeta">Métadonnées</a> 
+    <a href="tabChoixMaregraphe">Choix du marégraphe</a> 
 </p>
 <br>
