fonctionnement boutons accéder du choix des marégraphes

--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -27,7 +27,7 @@
           <td>{{i.longitude}}</td>
           <td>
             <div class="bouton">
-              <a href="tabChoixMaregraphe"><button class="acceder" type="button">Accéder</button></a>
+              <a href="tabMaregrapheMeta/{{i.id_tdb}}"><button class="acceder" type="button">Accéder</button></a>
             </div>
           </td>
         </tr>
