--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
@@ -4,6 +4,7 @@
     padding-top: 0.5%;
     padding-bottom: 0.5%;
     border-radius: 3px;
+    font-size: 25px;
 }
 
 .affiche{
@@ -30,6 +31,8 @@ table, td, th {
     border-bottom: 1px solid #C4C3C3; /* Ajoute uniquement des lignes horizontales */
     padding: 8px; /* Optionnel, pour espacer le contenu */
     padding: 0px 20px;
+    text-align: left;
+    
 }
 
 .lignes_a_colorer:nth-child(odd) {
