--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
@@ -4,7 +4,9 @@
     padding-top: 0.5%;
     padding-bottom: 0.5%;
     border-radius: 3px;
+    font-size: 25px;
 }
+
 
 .affiche{
     display: block;
@@ -12,6 +14,51 @@
 
 .invisible{
     display:none;
+}
+
+.Ajouter{
+    display: flex;
+    border-radius: 3px;
+    border: 2px solid #04acc6;
+    background-color: #09c5e1;
+    padding: 10px;
+    color: white;
+    gap: 10px;
+    position: relative;
+    left: 65%;
+}
+
+/* Styles pour le modal (fenêtre superposée) */
+.modal {
+    /*display: none;  Caché par défaut */
+    position: fixed; /* Positionné par rapport à la fenêtre */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+    justify-content: center;
+    align-items: center;
+}
+
+/* Contenu du modal */
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    margin: auto;
+    position: relative;
+}
+
+/* Bouton pour fermer le modal */
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 
@@ -30,6 +77,12 @@ table, td, th {
     border-bottom: 1px solid #C4C3C3; /* Ajoute uniquement des lignes horizontales */
     padding: 8px; /* Optionnel, pour espacer le contenu */
     padding: 0px 20px;
+    text-align: left;
+
+}
+
+.Actions{
+    text-align: center;
 }
 
 .lignes_a_colorer:nth-child(odd) {
@@ -45,9 +98,6 @@ table, td, th {
     background-color: grey;
 }
 
-caption{
-    margin-bottom: 30px;
-}
 
 .Editer{
     background-color: white;
