--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -9,22 +9,22 @@
    </div>
    <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
   
-    <button class="Ajouter"  type="button"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
+    <button class="Ajouter" id="Ajouter"  type="button" (click)="add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
 
-    <div id="formModal" class="modal">
-      <div class="modal-content">
+    <div class="fond_form" id="hide_form">
+      <div class="form_add_meta">
         <span class="close-button">&times;</span>
-        <h2>Nouvelle métadonnée</h2>
+        <h2>Ajouter une métadonnée</h2>
         <form>
           <label for="id_meta">Identifiant de la métadonnée : </label>
-          <input type="text" id="id_meta" name="id_meta"><br><br>
-          <label for="description">Description de la métadonnée : </label>
-          <input type="description" id="description" name="description"><br><br>
-          <div class="bouton">
-            <button class="ajout_meta" type="submit">Créer</button>
-            <button class="supp_meta" type="delete"> <img src="assets\poubelle.png" height="20" width="17"> Supprimer</button>
-          </div>
+            <input type="text" id="id_meta" name="id_meta"><br><br>
+            <label for="description">Description de la métadonnée : </label>
+            <input type="description" id="description" name="description"><br><br>
         </form>
+        <div class="bouton">
+          <button class="ajout_meta"  type="submit">Créer</button>
+          <button class="supp_meta" id="supp_meta" type="delete"  (click)="annuler()">Annuler</button>
+        </div>
       </div>
     </div>
     
