Message login incorrect

--- a/FrontEnd/src/app/component/authentification/authentification.component.html
+++ b/FrontEnd/src/app/component/authentification/authentification.component.html
@@ -12,4 +12,5 @@
         <button class="annuler" id="annuler" type="delete">Annuler</button>
       </div>
     </div>
+    <p id="error" class="hide">Nom d'utilisateur ou mot de passe incorrect</p>
   </div>
