ajout bouton deconnexion fonctionnel

--- a/FrontEnd/src/app/component/header/header.component.html
+++ b/FrontEnd/src/app/component/header/header.component.html
@@ -3,5 +3,6 @@
     <a href="https://www.google.fr/">Gestion des partenaires</a>
     <a href="tabMeta">Métadonnées</a> 
     <a href="tabChoixMaregraphe">Choix du marégraphe</a> 
+    <a href="" (click)="deconnexion()">Déconnexion</a>
 </p>
 <br>
