--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
@@ -10,21 +10,24 @@
 <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
   
 <br>
-<button class="Ajouter" id="Ajouter"  type="button" (click)="add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
+<button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
 
 
 <div class="fond_form" id="hide_form">
   <div class="form_add_meta">
     <span class="close-button">&times;</span>
     <h2>Ajouter une métadonnée</h2>
-    <form>
+    <form [formGroup]="formAddMeta">
       <label for="id_meta">Identifiant de la métadonnée : </label>
-        <input type="text" id="id_meta" name="id_meta"><br><br>
-        <label for="description">Description de la métadonnée : </label>
-        <input type="description" id="description" name="description"><br><br>
+      <input type="text" id="id_meta" formControlName="id"><br><br>
+      <label for="description">Description de la métadonnée : </label>
+      <input type="text" id="description" name="description" formControlName="description"><br><br>
+      <label for="ordre">Ordre de la métadonnée</label>
+      <input type="number" id="ordre" formControlName="ordre"><br><br>
+      <button class="ajout_meta"  type="submit">Créer</button>
     </form>
     <div class="bouton">
-      <button class="ajout_meta"  type="submit">Créer</button>
+      <button class="ajout_meta"  type="submit" (click)="addMeta()">Créer</button>
       <button class="supp_meta" id="supp_meta" type="delete"  (click)="annuler()">Annuler</button>
     </div>
   </div>
@@ -38,6 +41,7 @@
     <tr>
       <th>ID Métadonnées</th>
       <th>Description</th>
+      <th>Ordre</th>
       <th class="Actions">Actions</th>
     </tr>
   </thead>
@@ -45,6 +49,7 @@
     <tr class="lignes_a_colorer" *ngFor="let i of donnees">
       <td>{{i.id}}</td>
       <td>{{i.description}}</td>
+      <td>{{i.ordre}}</td>
       <td>
         <div class="bouton">
           <button class="Editer"  type="button">Editer</button>
