--- a/FrontEnd/src/app/component/header/header.component.html
+++ b/FrontEnd/src/app/component/header/header.component.html
@@ -1,8 +1,7 @@
 <p class="liens">
-    <a href="https://www.google.fr/">Gestion des marégraphes</a>  
     <a href="https://www.google.fr/">Gestion des partenaires</a>
-    <a href="tabMeta">Métadonnées</a> 
-    <a href="tabChoixMaregraphe">Choix du marégraphe</a> 
+    <a href="tabChoixMaregraphe">Gestion des marégraphes</a> 
+    <a href="tabMeta">Gestion des métadonnées</a> 
     <a href="" (click)="deconnexion()">Déconnexion</a>
 </p>
 <br>
