--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -13,7 +13,7 @@
 
     <div class="fond_form" id="hide_form">
       <div class="form_add_meta">
-        <span class="close-button">&times;</span>
+        <span class="close-button" (click)="annuler()">&times;</span>
         <h2>Ajouter une métadonnée</h2>
         <form>
           <label for="id_meta">Identifiant de la métadonnée : </label>
