--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
@@ -15,6 +15,91 @@
     display:none;
 }
 
+.Ajouter{
+    display: flex;
+    border-radius: 3px;
+    border: 2px solid #04acc6;
+    background-color: #09c5e1;
+    padding: 10px;
+    color: white;
+    gap: 10px;
+    position: relative;
+    left: 65%;
+}
+
+.fond_form {
+    display: none;
+    position: fixed; /* Positionné par rapport à la fenêtre */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+    justify-content: center;
+    align-items: center;
+}
+
+#hide_form{
+    display:none;
+}
+
+#show_form{
+    display: flex;
+}
+.form_add_meta {
+    transform: scale(1.5);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    margin-top: 13%;
+    margin-left: 35%;
+    position: relative;
+}
+
+/* Bouton pour fermer le modal */
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.bouton{
+    display: flex;
+    gap: 10px;
+    margin: 10px;
+    padding: 0.5%;
+    border-radius: 3px;
+}
+
+.ajout_meta{
+    background-color: white;
+    color: black;
+}
+
+
+.supp_meta{
+    display: flex;
+    background-color: red;
+    color: white;
+    gap: 10px;
+
+}
+
+  
+
+.ajout_meta, .supp_meta{
+    border-radius: 6px;
+    text-align: center;
+    font-size: 14px;
+    padding: 10px;
+    cursor: pointer;
+    margin: 2.5px;
+    border: 2px solid #C4C3C3;
+}
 
 .colonne{
     text-align: left;
@@ -52,7 +137,7 @@ caption{
     margin-bottom: 30px;
 }
 
-.acceder{
+.acceder, .editer{
     background-color: white;
     color: black;
     display: inline-block;
@@ -70,11 +155,4 @@ caption{
 
 .acceder > a{
     text-decoration: none;
-}
-.bouton{
-    display: flex;
-    gap: 10px;
-    margin: 10px;
-    padding: 0.5%;
-    border-radius: 3px;
 }
