--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
@@ -48,12 +48,14 @@
     display: flex;
 }
 .form_add_meta {
+    transform: scale(1.5);
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin: auto;
+    width: 400px;
+    margin-top: 13%;
+    margin-left: 35%;
     position: relative;
 }
 
@@ -66,6 +68,38 @@
     cursor: pointer;
 }
 
+.bouton{
+    display: flex;
+    gap: 10px;
+    margin: 10px;
+    padding: 0.5%;
+    border-radius: 3px;
+}
+
+.ajout_meta{
+    background-color: white;
+    color: black;
+}
+
+
+.supp_meta{
+    display: flex;
+    background-color: red;
+    color: white;
+    gap: 10px;
+
+}
+
+
+.ajout_meta, .supp_meta{
+    border-radius: 6px;
+    text-align: center;
+    font-size: 14px;
+    padding: 10px;
+    cursor: pointer;
+    margin: 2.5px;
+    border: 2px solid #C4C3C3;
+}
 
 .colonne{
     text-align: left;
@@ -122,42 +156,6 @@ table, td, th {
     font-size: 14px;
     padding: 10px;
     width: 100px;
-    cursor: pointer;
-    margin: 2.5px;
-    border: 2px solid #C4C3C3;
-}
-
-
-.bouton{
-    display: flex;
-    gap: 10px;
-    margin: 10px;
-    padding: 0.5%;
-    border-radius: 3px;
-}
-
-.ajout_meta{
-    background-color: white;
-    color: black;
-}
-
-
-.supp_meta{
-    display: flex;
-    background-color: red;
-    color: white;
-
-    gap: 10px;
-
-}
-
-  
-
-.ajout_meta, .supp_meta{
-    border-radius: 6px;
-    text-align: center;
-    font-size: 14px;
-    padding: 10px;
     cursor: pointer;
     margin: 2.5px;
     border: 2px solid #C4C3C3;
