--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.css
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.css
@@ -118,12 +118,14 @@ caption{
     display: flex;
 }
 .form_add_meta {
+    transform: scale(1.5);
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin: auto;
+    width: 400px;
+    margin-top: 13%;
+    margin-left: 35%;
     position: relative;
 }
 
