delete metadonnée in marégraphe query

--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -48,7 +48,7 @@
           <td>
             <div class="bouton">
               <button class="Editer"  type="button">Editer</button>
-              <button class="Supprimer" type="button">Supprimer</button>
+              <button class="Supprimer" type="button" (click)="deleteMeta(i.id_maregraphe, i.id_meta)">Supprimer</button>
             </div>
           </td>
         </tr>
