Delete metadata type query

--- a/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
+++ b/FrontEnd/src/app/component/tab_meta/tab_meta.component.html
@@ -52,7 +52,7 @@
       <td>
         <div class="bouton">
           <button class="Editer"  type="button">Editer</button>
-          <button class="Supprimer" type="button">Supprimer</button>
+          <button class="Supprimer" type="button" (click)="deleteMeta(i.id)">Supprimer</button>
         </div>
       </td>
     </tr>
