--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.css
@@ -27,7 +27,9 @@
     left: 65%;
 }
 
-.fond_form {
+
+/** CSS pour formulaire d'ajout des infos du marégraphe **/
+.fond_form{
     display: none;
     position: fixed; /* Positionné par rapport à la fenêtre */
     top: 0;
@@ -39,13 +41,10 @@
     align-items: center;
 }
 
-#hide_form{
+#hide_form_add{
     display:none;
 }
 
-#show_form{
-    display: flex;
-}
 .form_add_meta {
     transform: scale(1.5);
     background-color: #fff;
@@ -57,6 +56,8 @@
     margin-left: 35%;
     position: relative;
 }
+
+/************************************************************/
 
 /* Bouton pour fermer le modal */
 .close-button {
@@ -156,3 +157,37 @@ caption{
 .acceder > a{
     text-decoration: none;
 }
+
+
+/** CSS pour formulaire de modification des infos du marégraphe **/
+
+.fond_form_modif {
+    display: none;
+    position: fixed; /* Positionné par rapport à la fenêtre */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+    justify-content: center;
+    align-items: center;
+}
+
+#hide_form_modif{
+    display:none;
+}
+
+.form_modif_meta {
+    transform: scale(1.5);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    margin-top: 13%;
+    margin-left: 35%;
+    position: relative;
+}
+
+
+/******************************************************************/
