--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -8,33 +8,33 @@
     Chargement des données ...
   </div>
   <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
+<!-------------------- Formulaire d'aout d'un marégraphe -------------------->
+    <button class="Ajouter" id="Ajouter"  type="button" (click)="show_add_maregraphe()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter un marégraphe</button>
 
-    <button class="Ajouter" id="Ajouter"  type="button" (click)="add_meta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter un marégraphe</button>
-
-    <div class="fond_form" id="hide_form">
+    <div class="fond_form" id="hide_form_add">
       <div class="form_add_meta">
-        <span class="close-button" (click)="annuler()">&times;</span>
+        <span class="close-button" (click)="annuler_add()">&times;</span>
         <h2>Ajouter un marégraphe</h2>
-        <form>
+        <form [formGroup]="formAddMaregraphe">
           <label for="ville">Ville : </label>
-          <input type="text" id="ville" name="ville"><br><br>
+          <input type="text" id="ville" formControlName="ville"><br><br>
 
           <label for="id_maregraphe">Identifiant du marégraphe : </label>
-          <input type="text" id="id_maregraphe" name="id_maregraphe"><br><br>
+          <input type="text" id="id_maregraphe" formControlName="id_maregraphe"><br><br>
 
           <label for="latitude">Latitude : </label>
-          <input type="number" id="latitude" name="latitude"><br><br>
+          <input type="number" id="latitude" formControlName="latitude"><br><br>
 
           <label for="longitude">Longitude : </label>
-          <input type="number" id="longitude" name="longitude"><br><br>
+          <input type="number" id="longitude" formControlName="longitude"><br><br>
         </form>
         <div class="bouton">
-          <button class="ajout_meta"  type="submit">Créer</button>
-          <button class="supp_meta" id="supp_meta" type="delete"  (click)="annuler()">Annuler</button>
+          <button class="ajout_meta"  type="submit" (click)="addMaregraphe()">Créer</button>
+          <button class="supp_meta" id="supp_meta" type="delete"  (click)="annuler_add()">Annuler</button>
         </div>
       </div>
     </div>
-
+<!---------------------------------------------------------------------------->
     <br><br><br>
     <table>    
       <thead>
@@ -55,8 +55,41 @@
           <td>
             <div class="bouton">
               <a href="tabMaregrapheMeta/{{i.id_tdb}}"><button class="acceder" type="button">Accéder</button></a>
-              <button class="editer" type="button">Editer</button>
+
+<!-------------------- Formulaire de modification d'un marégraphe -------------------->
+
+              <button class="editer" type="button" (click)="show_modif_maregraphe()">Editer</button>
             </div>
+
+            
+            <div class="fond_form" id="hide_form_modif">
+              
+              <div class="form_add_meta">
+                
+                <span class="close-button" (click)="annuler_modif()">&times;</span>
+                <h2>Modifier les informations du marégraphe</h2>
+          
+                <form>
+                  <label for="ville">Ville : </label>
+                  <input type="text" id="ville" name="ville"><br><br>
+        
+                  <label for="id_maregraphe">Identifiant du marégraphe : </label>
+                  <input type="text" id="id_maregraphe" name="id_maregraphe"><br><br>
+        
+                  <label for="latitude">Latitude : </label>
+                  <input type="number" id="latitude" name="latitude"><br><br>
+        
+                  <label for="longitude">Longitude : </label>
+                  <input type="number" id="longitude" name="longitude"><br><br>
+                </form>
+                <div class="bouton">
+                  <button class="ajout_meta"  type="submit">Créer</button>
+                  <button class="supp_meta" id="supp_meta" type="delete"  (click)="annuler_modif()">Annuler</button>
+                </div>
+<!---------------------------------------------------------------------------->     
+              </div>              
+            </div>
+            
           </td>
         </tr>
       </tbody>
