--- a/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.css
+++ b/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.css
@@ -7,6 +7,7 @@
     font-size: 25px;
 }
 
+
 .affiche{
     display: block;
 }
@@ -27,9 +28,7 @@
     left: 65%;
 }
 
-
-/** CSS pour formulaire d'ajout des infos du marégraphe **/
-.fond_form{
+.fond_form {
     display: none;
     position: fixed; /* Positionné par rapport à la fenêtre */
     top: 0;
@@ -41,11 +40,15 @@
     align-items: center;
 }
 
-#hide_form_add{
+#hide_form{
     display:none;
 }
 
+#show_form{
+    display: flex;
+}
 .form_add_meta {
+    transform: scale(1.5);
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -55,8 +58,6 @@
     margin-left: 35%;
     position: relative;
 }
-
-/************************************************************/
 
 /* Bouton pour fermer le modal */
 .close-button {
@@ -89,7 +90,6 @@
 
 }
 
-  
 
 .ajout_meta, .supp_meta{
     border-radius: 6px;
@@ -101,6 +101,9 @@
     border: 2px solid #C4C3C3;
 }
 
+.colonne{
+    text-align: left;
+}
 
 table{
     border-collapse: collapse;
@@ -114,7 +117,11 @@ table, td, th {
     padding: 8px; /* Optionnel, pour espacer le contenu */
     padding: 0px 20px;
     text-align: left;
-    
+
+}
+
+.Actions{
+    text-align: center;
 }
 
 .lignes_a_colorer:nth-child(odd) {
@@ -127,12 +134,21 @@ table, td, th {
 }
 
 .lignes_a_colorer:hover{
-    background-color: lightgray;
+    background-color: grey;
 }
 
-.acceder, .editer{
+
+.Editer{
     background-color: white;
     color: black;
+}
+.Supprimer{
+    background-color: red;
+    color: white;
+}
+
+.Editer, .Supprimer{
+    
     display: inline-block;
     border-radius: 6px;
     border-color: #C4C3C3;
@@ -143,58 +159,4 @@ table, td, th {
     cursor: pointer;
     margin: 2.5px;
     border: 2px solid #C4C3C3;
-    text-decoration: none;
 }
-
-.acceder > a{
-    text-decoration: none;
-}
-
-
-/** CSS pour formulaire de modification des infos du marégraphe **/
-
-.fond_form_modif {
-    display: none;
-    position: fixed; /* Positionné par rapport à la fenêtre */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-    justify-content: center;
-    align-items: center;
-}
-
-#hide_form_modif{
-    display:none;
-}
-
-.form_modif_meta {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    margin-top: 13%;
-    margin-left: 35%;
-    position: relative;
-}
-
-
-/******************************************************************/
-
-
-input {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    outline: none;
-  }
-  
-  input:focus {
-    border: 3px solid #555;
-  }
