--- a/FrontEnd/src/app/component/header/header.component.html
+++ b/FrontEnd/src/app/component/header/header.component.html
@@ -1,5 +1,5 @@
 <p class="liens">
-    <a href="https://www.google.fr/">Gestion des partenaires</a>
+    <a href="tabChoixPartenaire">Gestion des partenaires</a>
     <a href="tabChoixMaregraphe">Gestion des marégraphes</a> 
     <a href="tabMeta">Gestion des métadonnées</a> 
     <a href="" (click)="deconnexion()">Déconnexion</a>
