fix affichage date_modif

--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -44,7 +44,7 @@
           <td>{{i.id_maregraphe}}</td>
           <td>{{i.id_meta}}</td>
           <td>{{i.donnee}}</td>
-          <td>{{i.date_donnees}}</td>
+          <td>{{i.date_donnee}}</td>
           <td>
             <div class="bouton">
               <button class="Editer"  type="button">Editer</button>
