ajout logos partenaires

--- a/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.html
+++ b/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.html
@@ -50,8 +50,8 @@
       <tr class="lignes_a_colorer" *ngFor="let i of donnees">
         <td>{{i.id}}</td>
         <td>{{i.nom}}</td>
-        <td>{{i.logo}}</td>
-        <td>{{i.url}}</td>
+        <td><img class="logos" src="https://services.data.shom.fr/static/logo/DDM/{{i.logo}}"></td>
+        <td><a href={{i.url}} target="_blank">{{i.url}}</a></td>
         <td>
           <div class="bouton">
             <a href="tabPartenaireMaregraphe/{{i.id}}"><button class="acceder" type="button">Accéder</button></a>
