--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+.lignes_a_colorer:nth-child(odd) {
+    background-color: #F0F0F0; /* Gris clair */
+}
+
+  /* Colorie les lignes impaires en blanc */
+.lignes_a_colorer:nth-child(even) {
+    background-color: white; /* Blanc */
+}
+
+.lignes_a_colorer:hover{
+    background-color: lightgray;
+}
+
+.bouton_retour{
+    
+}
